<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="30dip" >
            
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dip"
                android:text="@string/hello"
                android:textSize="22sp" />
			
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/benchmarks"
                android:textSize="16sp" />
			
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:entries="@array/benchmark_arrays" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dip" >
                
                <Button
                android:id="@+id/bt_run_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_local_label"
                android:textSize="14sp"
                android:visibility="visible" />
                
                <Button
                android:id="@+id/bt_run_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_cloud_label"
                android:layout_gravity="right"
                android:textSize="14sp" />
                
            </LinearLayout>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dip"
                android:text="@string/runallbencmarks"
                android:textSize="20sp" />
            
            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1_label"
                android:textSize="18sp" />
                                
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:text="@string/idle"
                android:textSize="24.5sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button4_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                />
           

        </LinearLayout>
